# ccboost_segmentation

./: .gitmodules  CCBTypes.h  CMakeLists.txt  CcboostSegmentationPlugin.cpp  CcboostSegmentationPlugin.h  Label.cpp  Label.h  README.md
CMake/Modules/: FindQuaZip.cmake  FindXLSLIB.cmake
Core/: SimpleProcessing.h
Core/Extensions/: CcboostSegmentationExtension.cpp  CcboostSegmentationExtension.h  ExtensionFactory.cpp
Core/auxItk/: ._EigenOfStructureTensorImageFilter2.h~  ._GradientMagnitudeImageFilter2.h  AllEigenVectorsOfHessian2.h  GradientMagnitudeImageFilter2.cxx  ImageSplitter.h  ImageSplitter.txx  SimpleProcessing.h  SimpleProcessing.txx  SingleEigenVectorOfHessian2.h  SplitterImageFilter.h  SplitterImageFilter.txx
Core/iiboost/: CMakeLists.txt  test.cpp
Core/iiboost/extra/: Matrix3D.h
DockWidget/: CvlabPanel.cpp  CvlabPanel.h  CvlabPanel.ui  FeaturesDialog.cpp  FeaturesDialog.h  FeaturesDialog.ui  LabelWidget.cpp  LabelWidget.h  LabelWidget.ui
Filter/: CcboostAdapter.cpp  CcboostAdapter.h  CcboostAdapter.tpp  CcboostSegmentationFilter.cpp  CcboostSegmentationFilter.h  ConfigData.cpp  ConfigData.h  SASFetchBehaviour.cpp  SASFetchBehaviour.h  main.cpp
GUI/: CcboostSegmentationToolGroup.cpp  CcboostSegmentationToolGroup.h
GUI/Analysis/: SASAnalysisDialog.cpp  SASTabularReport.cpp  SASTabularReport.h
GUI/Settings/: CcboostSegmentationSettings.cpp  CcboostSegmentationSettings.h  CcboostSegmentationSettings.ui
GUI/rsc/: CcboostSegmentation.qrc  SynapseDetection.qrc
Preview/: PreviewSliceRepresentation.cpp  PreviewSliceRepresentation.h  PreviewWidget.cpp  PreviewWidget.h  TrainingVolumePreviewWidget.cpp  TrainingVolumePreviewWidget.h  TrainingVolumeSliceRepresentation.cpp  TrainingVolumeSliceRepresentation.h
Tasks/: CcboostTask.cpp  CcboostTask.h  ImportTask.cpp  ImportTask.h
